Disable winget package submission

--- a/.github/workflows/winget-submission.yml
+++ b/.github/workflows/winget-submission.yml
@@ -1,8 +1,8 @@
 name: Submit Nushell package to Windows Package Manager Community Repository
 
 on:
-  release:
-    types: [released]
+  # release:
+  #   types: [released]
   workflow_dispatch:
     inputs:
       tag_name:
